// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en <AddCategory> Debe mostrarse correctamente 1`] = `
<Fragment>
  <h3
    className="animate__fadeIn"
  >
    One Punch
  </h3>
  <p>
    Loading...
  </p>
  <div
    className="card-grid"
  >
    <ol />
  </div>
</Fragment>
`;

exports[`Pruebas en <AddCategory> debe de mostrar items cuando se cargan imágenes useFetchGifs 1`] = `
<Fragment>
  <h3
    className="animate__fadeIn"
  >
    One Punch
  </h3>
  <div
    className="card-grid"
  >
    <ol>
      <GifGridItem
        id={1}
        key="1"
        title="cualquier cosa"
        url="http://localhost/q.png"
      />
    </ol>
  </div>
</Fragment>
`;
